--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "author": "",
+  "author": "mouse <krugentul@gmail.com>",
   "license": "MIT",
   "jest": {
     "setupFiles": [
@@ -166,5 +166,6 @@
       "pre-commit": "cross-env npm run lint && npm test",
       "pre-push": "cross-env npm run lint && npm test"
     }
-  }
+  },
+  "repository": "git@github.com:Smokymo5/week-2-react-routes.git"
 }
